test/error/impl_generic.colgm
struct A {
    a: i32
}

impl A {
    #[is_trivial(T)]
    pub func create(a: i32) -> A {
        return A { a: a };
    }
}

struct B<T> {
    a: i32
}

impl B {
    #[is_trivial(T)]
    pub func create(a: i32) -> B {
        return B { a: a };
    }
}

struct C {
    a: i32
}

impl C<T> {
    #[is_trivial(T)]
    pub func create(a: i32) -> C {
        return C { a: a };
    }
}