test/error/impl_generic.result
Error: cannot implement generic method for normal struct
  --> test/error/impl_generic.colgm:7:9
  | 
7 |     pub func create(a: i32) -> A {
  |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^
8 |         return A { a: a };
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^
9 |     }
  | ^^^^^ 

Error: should implement generic template for generic struct
  --> test/error/impl_generic.colgm:16:1
   | 
16 | impl B {
   | ^^^^^^^^^
   |   ...
   | 
21 | }
   | ^ 

Error: cannot implement generic template for normal struct
  --> test/error/impl_generic.colgm:27:1
   | 
27 | impl C<T> {
   | ^^^^^^^^^^^^
   |   ...
   | 
32 | }
   | ^